<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:text="@string/date_of_collection"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/collectionDate"
                    android:textSize="20sp"
                    android:hint="@string/mm_dd_yyyy"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:text="@string/time_of_collection"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_of_day"
                    android:textSize="20sp"
                    android:hint="@string/hh_mm_am_pm"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:text="@string/tablet_number"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tablet_number"
                    android:textSize="20sp"
                    android:hint="@string/defaultTabletNumber"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/time_running"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/time_running_water"
            android:hint="@string/default_time"
            android:textSize="20sp"
            android:textColor="#575757"
            android:layout_marginStart="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:text="@string/temperature"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/cold_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cold"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="24dp"/>

            <RadioButton
                android:id="@+id/cool_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cool"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"/>

            <RadioButton
                android:id="@+id/tepid_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tepid"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"/>

            <RadioButton
                android:id="@+id/warm_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warm"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"/>

            <RadioButton
                android:id="@+id/hot_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"/>

            <RadioButton
                android:id="@+id/scalding_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scalding"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/normal_use"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#575757"
            android:gravity="center_horizontal"
            >

            <CheckBox
                android:id="@+id/checkBoxDrinking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#575757"
                android:text="@string/drinking"
                />

            <CheckBox
                android:id="@+id/checkBoxBrushingTeeth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"
                android:text="@string/brushing_teeth"
                android:layout_toEndOf="@id/checkBoxDrinking"
                />

            <CheckBox
                android:id="@+id/checkBoxHandwashing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"
                android:text="@string/handwashing"
                android:layout_toEndOf="@id/checkBoxBrushingTeeth"
                />

            <CheckBox
                android:id="@+id/checkBoxNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#575757"
                android:layout_marginStart="8dp"
                android:text="@string/none"
                android:layout_toEndOf="@id/checkBoxHandwashing"
                />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>