<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AestheticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/water_appearance"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:id="@+id/water_appearance_description"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            android:hint="@string/water_color_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/water_smell"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:id="@+id/water_smell_description"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            android:hint="@string/water_smell_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/water_taste"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:id="@+id/water_taste_description"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            android:hint="@string/water_taste_description"/>

    </LinearLayout>

</ScrollView>