<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BacteriaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/rottenEgg_smell" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:id="@+id/rottenEgg_no_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="18sp"
                android:textColor="#575757"/>
            <RadioButton
                android:id="@+id/rottenEgg_yes_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="18sp"
                android:textColor="#575757"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:text="@string/sediment"
            android:layout_marginTop="8dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:id="@+id/sediment_no_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="18sp"
                android:textColor="#575757"/>
            <RadioButton
                android:id="@+id/sediment_yes_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="18sp"
                android:textColor="#575757"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:text="@string/feathery"
            android:layout_marginTop="8dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:id="@+id/feathery_no_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="18sp"
                android:textColor="#575757"/>
            <RadioButton
                android:id="@+id/feathery_yes_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="18sp"
                android:textColor="#575757"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:text="@string/bacteria" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:id="@+id/negative_bacteria_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative"
                android:textSize="18sp"
                android:textColor="#575757"/>
            <RadioButton
                android:id="@+id/positive_bacteria_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positive"
                android:textSize="18sp"
                android:textColor="#575757"/>
        </RadioGroup>

    </LinearLayout>

</ScrollView>